--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     
 <link rel= "stylesheet" href = "style.css">
 
+<h1> Tic Tac Toe</h1>
 <div class = "container">
 <div class = row1>
     <input type = "button" id = 1a value = ""></input>
